correction bouton + responsive/wrap

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,6 +15,9 @@ header {
     align-items: center;
     justify-content: flex-end;
     background-color: grey;
+}
+
+header {
     width: 100%;
     height: 50px;
 }
@@ -39,6 +42,7 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     gap: 15px;
+    
 }
 
 .cards_cities {
@@ -46,12 +50,13 @@ nav a:hover {
     gap: 25px;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .cards {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
     border: 1px solid;
     overflow: hidden;
@@ -76,13 +81,13 @@ nav a:hover {
 
 .button {
     align-self: center;
-    margin-top: 60px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .button a {
     display: inline-block;
     padding: 10px 20px;
-    text-align: center;
     text-align: center;
     text-decoration: none;
     color: white;
